- Remplacement des vieilles fonctions php (eregi et cie) ; - un peu de formatage de code ; - encodage des fichiers avec accents, on passe en UTF-8

--- a/installation/tpl/welcome.html
+++ b/installation/tpl/welcome.html
@@ -2,7 +2,8 @@
 {L_welcome_text}
 
 <form action="{form_action}" method="post" enctype="multipart/form-data" name="welcome" id="welcome">
-<div id="boutons">
-    <input name="retour" type="button" value="{L_retour}" class="retour" onclick="javascript:self.location='{link_retour}'" /><input type="submit" name="Submit" value="{L_start_installation}" class="continue" />
-  </div>
+	<div id="boutons">
+		<input name="retour" type="button" value="{L_retour}" class="retour"
+		       onclick="javascript:self.location='{link_retour}'"/><input type="submit" name="Submit" value="{L_start_installation}" class="continue"/>
+	</div>
 </form>
